# cbor-web

./: .gitignore  CBOR-CRAWL-SPEC.md  CBOR-WEB-AMENDMENTS-v2.1.1.md  CBOR-WEB-CORE.md  CBOR-WEB-CRITICAL-REVIEW.md  CBOR-WEB-DOLEANCE.md  CBOR-WEB-ECONOMICS.md  CBOR-WEB-GENERATIVE.md  CBOR-WEB-MULTIMEDIA.md  CBOR-WEB-REFERENCE.md  CBOR-WEB-SECURITY.md  CBOR-WEB-SPEC-v0.1.md  CBOR-WEB-SPEC-v2.1.md  CBOR-WEB-SPEC-v3.0.md  CONTRIBUTING.md  Cargo.toml  DIRECTIVE-CLAUDE-IA.md  PROOF.md  README.md  SECURITY.md  VISION-CBOR-WEB.md  article-fin-du-web-html.md
.github/: dependabot.yml
.github/workflows/: ci.yml  npm-publish.yml
.wrangler/cache/: cf.json
business/: cbor-web-business-plan.md  cbor-web-trading-report.md
clients/chrome-extension/: background.js  backlinks.js  competitor.js  crawler.js  exporter.js  manifest.json  renderer.js  sidepanel.js  styles.css
clients/cpp/: cborweb.hpp
clients/go/: cborweb.go
clients/java/: CborWebClient.java
clients/php/: CborWeb.php
clients/python/: README.md  pyproject.toml
clients/python/cborweb/: __init__.py
clients/python/tests/: test_cborweb.py
clients/react/: CBORWebContent.tsx  useCBORWeb.ts
clients/ruby/: cborweb.rb
clients/shopify/: README.md  cbor-web-shopify.liquid
clients/typescript/: cborweb.ts
clients/wordpress/: cbor-web.php  readme.txt
contracts/: CborWebToken.sol
docs/: commercial-ar.html  commercial-de.html  commercial-en.html  commercial-es.html  commercial-fr.html  commercial-hi.html  commercial-it.html  commercial-ja.html  commercial-ko.html  commercial-nl.html  commercial-pt.html  commercial-ru.html  commercial-zh.html  demo-ai-parsing-ar.html  demo-ai-parsing-de.html  demo-ai-parsing-en.html  demo-ai-parsing-es.html  demo-ai-parsing-fr.html  demo-ai-parsing-hi.html  demo-ai-parsing-it.html  demo-ai-parsing-ja.html  demo-ai-parsing-ko.html  demo-ai-parsing-nl.html  demo-ai-parsing-pt.html  demo-ai-parsing-ru.html  demo-ai-parsing-zh.html  image-reading-tools.md
docs/site/: index.html
marketing/: blog-launch.md  cold-email-prospect.md  linkedin-post.md
memory/: cbor-web-architecture-insight.md  cbor-web-projet.md  cbor-web-tiers-access.md  cbor-web-token-model.md  cbor-web-vision-document.md  outil-cbor.md
npm-package/: README.md  cborweb.ts  package.json
schemas/: README.md  cbor-web-core.cddl  cbor-web-generative.cddl  cbor-web-multimedia.cddl  cbor-web-security.cddl  cbor-web-unified.cddl
scripts/: benchmark.sh  ocr-to-cbor.py  prospect-scraper.py  smart-scraper.sh  tokenomics-dashboard.py
site/: index.html
spec/: draft-plot-cbor-web-00.md
src/: main.rs
test-fixtures/multilingual/en/: index.html
test-fixtures/multilingual/es/: index.html
test-fixtures/multilingual/fr/: index.html
test-fixtures/product-page/: index.html
test-fixtures/small-blog/: index.html
test-vectors/: README.md  test_vectors_summary.json  tv1_manifest.cbor  tv2_page.cbor  tv4_bundle.cbor  tv5_navigation.cbor  tv6_doleance.cbor  tv7_diff_manifest.cbor  tv8_security.cbor  tv9_multimedia.cbor
token/: README.md  foundry.toml
token/script/: Deploy.s.sol
token/src/: CBORW.sol
tools/: README.md
tools/audit-desktop/src-tauri/: Cargo.toml  tauri.conf.json
tools/audit-desktop/src-tauri/src/: main.rs  telemetry.rs
tools/audit-desktop/ui/: audit.js  index.html
tools/cbor-crawl/: Cargo.toml
tools/cbor-crawl/src/: main.rs
tools/cbor-server/: Cargo.toml  README.md  benchmark.sh  bootstrap.sh  cbor-server.service  deploy.sh  landing.html  worker.js  wrangler.toml
tools/cbor-server/src/: main.rs
tools/cbor-token/: Cargo.toml
tools/cbor-token/src/: main.rs
tools/cbor-vectors/: Cargo.toml
tools/cbor-vectors/src/: main.rs
tools/text2cbor/: Cargo.toml  benchmark-20260425-044119.json
tools/text2cbor-web/: Cargo.toml  DEPLOY.md  landing.html
tools/text2cbor-web/src/: main.rs
tools/text2cbor/src/: main.rs
vectors/: test_vectors_summary.json  tv3_product.cbor
vectors/cbor-vectors/: Cargo.toml
vectors/cbor-vectors/src/: main.rs
