[package]
name = "cbor-crawl"
version = "0.1.0"
edition = "2021"
description = "CBOR-Web crawler — AI agent consumer for binary web content"
license = "MIT"

[dependencies]
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls-tls", "brotli", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
hex = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
