[package]
name = "cbor-server"
version = "0.1.0"
edition = "2021"
description = "CBOR-Web HTTP server — reference implementation for serving binary web content"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
ciborium = "0.2"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
