[package]
name = "cbor-token"
version = "0.1.0"
edition = "2021"
description = "CBOR-Web Autonomous Token Server — hold-to-access ledger"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
sha3 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
