[package]
name = "text2cbor-web"
version = "0.1.0"
edition = "2021"
description = "SaaS web dashboard for text2cbor — upload HTML zip, get CBOR"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
zip = "2"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
