[package]
name = "text2cbor"
version = "0.1.0"
edition = "2021"
description = "Convert HTML websites to CBOR-Web v2.1 format"
license = "MIT"

[dependencies]
ciborium = "0.2"
sha2 = "0.10"
hex = "0.4"
scraper = "0.22"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
