[package]
name = "cbor-web-audit"
version = "2.0.0"
edition = "2021"
description = "CBOR-Web Audit Desktop — SEO/GEO/CBOR-Web analysis tool"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
sha2 = "0.10"
hex = "0.4"
dirs-next = "2.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
